--- a/CalculatorApp/CalculatorApp.xcodeproj/xcshareddata/xcschemes/CalculatorApp SwiftUI Rx.xcscheme
+++ b/CalculatorApp/CalculatorApp.xcodeproj/xcshareddata/xcschemes/CalculatorApp SwiftUI Rx.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "65C66759239E7166004916AC"
-               BuildableName = "Calculator SwiftUI.app"
-               BlueprintName = "CalculatorApp SwiftUI"
+               BlueprintIdentifier = "65CB3BEA239FD95000B5CC29"
+               BuildableName = "Calculator SwiftUI Rx.app"
+               BlueprintName = "CalculatorApp SwiftUI Rx"
                ReferencedContainer = "container:CalculatorApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -44,9 +44,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "65C66759239E7166004916AC"
-            BuildableName = "Calculator SwiftUI.app"
-            BlueprintName = "CalculatorApp SwiftUI"
+            BlueprintIdentifier = "65CB3BEA239FD95000B5CC29"
+            BuildableName = "Calculator SwiftUI Rx.app"
+            BlueprintName = "CalculatorApp SwiftUI Rx"
             ReferencedContainer = "container:CalculatorApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -61,9 +61,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "65C66759239E7166004916AC"
-            BuildableName = "Calculator SwiftUI.app"
-            BlueprintName = "CalculatorApp SwiftUI"
+            BlueprintIdentifier = "65CB3BEA239FD95000B5CC29"
+            BuildableName = "Calculator SwiftUI Rx.app"
+            BlueprintName = "CalculatorApp SwiftUI Rx"
             ReferencedContainer = "container:CalculatorApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
