--- a/CalculatorApp/CalculatorApp.xcodeproj/xcshareddata/xcschemes/CalculatorApp Xib.xcscheme
+++ b/CalculatorApp/CalculatorApp.xcodeproj/xcshareddata/xcschemes/CalculatorApp Xib.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "9A5F401723959CE5005C24CB"
-               BuildableName = "Calculator App.app"
+               BuildableName = "Calculator Xib.app"
                BlueprintName = "CalculatorApp Xib"
                ReferencedContainer = "container:CalculatorApp.xcodeproj">
             </BuildableReference>
@@ -65,7 +65,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "9A5F401723959CE5005C24CB"
-            BuildableName = "Calculator App.app"
+            BuildableName = "Calculator Xib.app"
             BlueprintName = "CalculatorApp Xib"
             ReferencedContainer = "container:CalculatorApp.xcodeproj">
          </BuildableReference>
@@ -82,7 +82,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "9A5F401723959CE5005C24CB"
-            BuildableName = "Calculator App.app"
+            BuildableName = "Calculator Xib.app"
             BlueprintName = "CalculatorApp Xib"
             ReferencedContainer = "container:CalculatorApp.xcodeproj">
          </BuildableReference>
